--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     }
                 });
             }
-
+//consolidate event handling by creating an event handling method and reusing it.
             iterate() {
                 if (this.paidInFull) 
                     return {
@@ -338,6 +338,7 @@
     </script>
 </body>
 </html>
+
 
 
 
